// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary correctly a single expense 1`] = `
<div>
  <p>
    Viewing 1 expense totalling $75.00
  </p>
</div>
`;

exports[`should render ExpensesSummary correctly with multiple expenses 1`] = `
<div>
  <p>
    Viewing 2 expenses totalling $76.95
  </p>
</div>
`;
